Fix z-index on toc-button

--- a/assets/css/modules/footer.scss
+++ b/assets/css/modules/footer.scss
@@ -4,11 +4,18 @@
   background-color: #347;
   margin-top: 1rem;
   color: white;
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  position: relative;
+  z-index: 9;
   & > a {
     color: white;
+  }
+}
+
+@media (min-width: 992px) {
+  .mainFooter {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
   }
 }
