--- a/assets/css/modules/tableOfContents.scss
+++ b/assets/css/modules/tableOfContents.scss
@@ -28,6 +28,7 @@
     border-radius: 50%;
     padding: 2rem 1rem;
     border: 1px solid $blue;
+    z-index: 0;
     &:hover {
       background-color: $blue;
       color: white;
